2010-08-04  John W. Eaton  <jwe@octave.org>

	* mex.cc (mxArray_number (const char *)): Create empty string if
	given NULL arg  (bug #30639).  Create 0x0 string array if given
	an empty string argument, not 1x0.

2010-08-03  Jaroslav Hajek  <highegg@gmail.com>

	* OPERATORS/op-str-str.cc: Fix assignment operator.
	* OPERATORS/op-str-s.cc: Likewise.
	* OPERATORS/op-str-m.cc: Likewise.

2010-08-03  Jaroslav Hajek  <highegg@gmail.com>

	* ov-fcn-handle.cc 
	(octave_value::subsref (..., const std::list<octave_lvalue> *)
	octave_value::do_multi_index_op (..., const std::list<octave_lvalue> *)): 
	New methods. Move code here.
	* ov-fcn-handle.h: Declare them.

2010-08-03  Jaroslav Hajek  <highegg@gmail.com>

	* ov-usr-fcn.cc (Fis_ignored_output): Rename to Fisargout. Change the
	behavior to indicate not ignored outputs.

2010-08-01  Rik <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/amd.cc, DLD-FUNCTIONS/balance.cc, 
	DLD-FUNCTIONS/besselj.cc, DLD-FUNCTIONS/betainc.cc,
	DLD-FUNCTIONS/ccolamd.cc, DLD-FUNCTIONS/cellfun.cc,
	DLD-FUNCTIONS/chol.cc, DLD-FUNCTIONS/colamd.cc, DLD-FUNCTIONS/daspk.cc,
	DLD-FUNCTIONS/dasrt.cc, DLD-FUNCTIONS/dot.cc, DLD-FUNCTIONS/eigs.cc,
	DLD-FUNCTIONS/fftw.cc, DLD-FUNCTIONS/filter.cc,
	DLD-FUNCTIONS/lookup.cc, DLD-FUNCTIONS/lsode.cc, DLD-FUNCTIONS/lu.cc,
	DLD-FUNCTIONS/matrix_type.cc, DLD-FUNCTIONS/onCleanup.cc,
	DLD-FUNCTIONS/qr.cc, DLD-FUNCTIONS/rand.cc, DLD-FUNCTIONS/regexp.cc,
	DLD-FUNCTIONS/sparse.cc, DLD-FUNCTIONS/str2double.cc,
	DLD-FUNCTIONS/tril.cc, DLD-FUNCTIONS/typecast.cc, data.cc, graphics.cc,
	load-save.cc, ov-null-mat.cc, ov-struct.cc, ov-usr-fcn.cc,
	pr-output.cc, strfns.cc, variables.cc: Grammarcheck documentation.  
	Add @noindent lines and ensure line length is less than 80.

2010-07-31  Rik <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/__magick_read__.cc, DLD-FUNCTIONS/__voronoi__.cc,
	DLD-FUNCTIONS/amd.cc, DLD-FUNCTIONS/balance.cc,
	DLD-FUNCTIONS/besselj.cc, DLD-FUNCTIONS/betainc.cc,